# pdflens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
pdflens/: __init__.py  cli.py  metadata.py  pdf_parser.py  report.py  security.py  structure.py
tests/: test_pdflens.py
