[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdflens"
version = "1.0.0"
description = "PDF Analysis & Security Toolkit — extract metadata, analyze structure, detect security threats, compare documents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "EdgarOrtegaRamirez" }]
keywords = ["pdf", "security", "analysis", "metadata", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=6.0,<7",
    "ruff>=0.10,<2",
]

[project.scripts]
pdflens = "pdflens.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM102", "SIM105", "SIM113", "SIM114", "SIM118"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
